--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 
 <style>
 /* ======================================================
-   CoreFlux Simpits — Production CSS (Next Level)
-   - Taller nav banner
-   - Logo left, CTA right
-   - Doubled center lockup in nav
-   - Nav bounded to .wrap width, not viewport edge
+   CoreFlux Simpits — Production CSS (Next Level Atlas)
+   - Taller nav banner, centered lockup text
+   - Brand left / CTA right pulled in to wrap width
    - No nav pills
-   - Fill mode locked (no crop) in hero mock
+   - Hero mock: always fill (cover), only 2 slides
+   - Fit/Fill toggle now cosmetic/no-op
    ====================================================== */
 
 /* ---- Tokens ---- */
@@ -45,10 +44,8 @@
 
   --logo-h:54px;             /* partner logos height */
 
-  --nav-h:180px;
+  --nav-h:160px;
   --content-max:1200px;
-
-  --side-pad: max((100vw - var(--content-max))/2, 4vw);
 }
 
 /* ---- Base ---- */
@@ -76,10 +73,7 @@ a{color:inherit;text-decoration:none}
 img{max-width:100%;display:block}
 
 /* wrapper */
-.wrap{
-  width:min(var(--content-max),92vw);
-  margin:0 auto;
-}
+.wrap{ width:min(var(--content-max),92vw); margin:0 auto; }
 
 .lede{
   color:var(--muted);
@@ -89,20 +83,12 @@ img{max-width:100%;display:block}
   max-width:680px;
 }
 
-section{
-  padding:48px 0;
-  position:relative;
-  z-index:1;
-}
+section{ padding:48px 0; position:relative; z-index:1; }
 
-/* ---- Global particles canvas ---- */
+/* ---- Global particles canvas (fixed brightness) ---- */
 #aiCanvas{
-  position:fixed;
-  inset:0;
-  z-index:-1;
-  pointer-events:none;
-  opacity:.55;
-  transition:none;
+  position:fixed; inset:0; z-index:-1; pointer-events:none;
+  opacity:.55; transition:none;
 }
 
 /* ======================================================
@@ -122,36 +108,34 @@ section{
 
   display:flex;
   align-items:center;
-  padding-left:var(--side-pad);
-  padding-right:var(--side-pad);
 }
 .nav__inner{
-  display:grid;
-  grid-template-columns:auto 1fr auto;
+  display:flex;
   align-items:center;
-  width:100%;
-  height:100%;
-  max-width:var(--content-max);
+  justify-content:space-between;
+  width:min(var(--content-max),92vw); /* <- pull in edges */
   margin:0 auto;
-  column-gap:20px;
+  height:100%;
+  padding:0;
 }
 
 /* LEFT: LOGO */
-.brand-left{
+.brand{
   display:flex;
   align-items:center;
+  gap:16px;
   min-width:0;
 }
 .brand__logo-img{
-  height:120px;
+  height:110px;
   width:auto;
-  max-height:120px;
+  max-height:110px;
   object-fit:contain;
   image-rendering:auto;
   display:block;
 }
 
-/* CENTER: LOCKUP */
+/* CENTER: LOCKUP (now hero identity, double size ask) */
 .brand__center{
   text-align:center;
   line-height:1.05;
@@ -160,10 +144,11 @@ section{
   align-items:center;
   justify-content:center;
   min-width:0;
+  max-width:60%;
 }
 .brand__tagline{
   font-weight:800;
-  font-size:2.4rem;
+  font-size:2.5rem; /* bumped */
   line-height:1.1;
   letter-spacing:-.03em;
   background:linear-gradient(90deg,#cfe9ff 0%, #7fd3ff 55%, #ffe189 100%);
@@ -177,11 +162,11 @@ section{
 }
 .brand__name{
   font-weight:900;
-  font-size:2.4rem;
+  font-size:2.5rem; /* bumped */
   line-height:1.1;
   color:var(--text);
   letter-spacing:-.03em;
-  margin-top:4px;
+  margin-top:6px;
 }
 .brand__subline{
   margin-top:10px;
@@ -215,10 +200,9 @@ section{
   border:none;
   cursor:pointer;
   text-decoration:none;
-  white-space:nowrap;
 }
 
-/* kill legacy nav links/burger */
+/* hide old nav links/burger everywhere */
 .nav__links{display:none!important;}
 .nav__burger{display:none!important;}
 
@@ -357,7 +341,9 @@ section{
   font-weight:500
 }
 
-/* HERO MOCK (carousel) */
+/* ======================================================
+   HERO MOCK (carousel) — 2 slides, always fill
+   ====================================================== */
 .mock-wrap{ position:relative }
 #mockGlow.mock-glow{
   position:absolute;
@@ -379,26 +365,26 @@ section{
   height:540px;
   max-height:540px;
   box-shadow:0 0 80px rgba(0,198,255,.35), 0 40px 120px rgba(0,0,0,.6);
-  z-index:1
+  z-index:1;
 }
 
-/* FORCE FILL MODE ALWAYS ON:
-   - mock always has .fit in markup
-   - slides default to contain
+/* FILL MODE LOCKED:
+   - always cover the frame
+   - subtle cinematic scale
 */
 .mock__slide{
   position:absolute;
   inset:0;
   width:100%;
   height:100%;
-  object-fit:contain; /* locked */
-  background:#0b1020;
+  object-fit:cover;          /* always fill */
   opacity:0;
-  transform:scale(1);
-  transition:opacity 1s ease;
+  transform:scale(1.03);
+  transition:opacity 1s ease, transform 9s ease;
 }
 .mock__slide.active{
   opacity:1;
+  transform:scale(1.08);
 }
 
 /* dots + toggle */
@@ -409,7 +395,7 @@ section{
   transform:translateX(-50%);
   display:flex;
   gap:8px;
-  z-index:2
+  z-index:2;
 }
 .dot{
   width:10px;
@@ -417,12 +403,14 @@ section{
   border-radius:50%;
   background:rgba(255,255,255,.32);
   cursor:pointer;
-  transition:transform .2s,background .2s
+  transition:transform .2s,background .2s;
 }
 .dot.active{
   background:linear-gradient(135deg,var(--accent),#4be3d1);
-  transform:scale(1.2)
+  transform:scale(1.2);
 }
+
+/* cosmetic toggle */
 .mock__toggle{
   position:absolute;
   top:12px;
@@ -437,13 +425,12 @@ section{
   font-size:12px;
   line-height:1.2;
   color:var(--text);
-  cursor:pointer
+  cursor:pointer;
 }
 
 /* ======================================================
    SECTION HEAD / PANELS
    ====================================================== */
-
 .section__head{
   display:flex;
   align-items:baseline;
@@ -480,7 +467,6 @@ section{
 /* ======================================================
    CARDS / GRIDS
    ====================================================== */
-
 .cards{
   display:grid;
   grid-template-columns:repeat(3,1fr);
@@ -545,8 +531,7 @@ section{
   width:100%;
   max-width:320px;
   margin:0 auto 12px;
-  height:auto;
-  object-fit:contain;
+  height:auto
 }
 .chassis-vis__label{
   font-size:.8rem;
@@ -623,12 +608,7 @@ section{
   width:100%;
   height:auto;
   display:block;
-  margin:0 auto 12px;
-  object-fit:contain;
-  background:#000;
-  border-radius:12px;
-  border:1px solid var(--border);
-  box-shadow:var(--shadow);
+  margin:0 auto 12px
 }
 
 /* spec grid */
@@ -884,43 +864,16 @@ aside.panel{
   .hero{ grid-template-columns:1fr }
   .mock{ height:400px; max-height:400px }
 }
-
 @media (max-width:980px){
   .statbar{ grid-template-columns:repeat(2,1fr) }
   .cards{ grid-template-columns:1fr }
   :root{ --logo-h:46px }
-
-  .brand__tagline,
-  .brand__name{
-    font-size:2rem;
-  }
-  .nav{
-    --nav-h:170px;
-  }
+  .brand__center{ max-width:100%; }
 }
-
-@media (max-width:640px){
-  .nav__inner{
-    grid-template-columns:1fr;
-    row-gap:12px;
-    text-align:center;
-    justify-items:center;
-  }
-  .brand-left{
-    order:2;
-  }
-  .nav__cta-wrap{
-    order:3;
-  }
-  .brand__center{
-    order:1;
-  }
-}
-
 @media (max-width:520px){
   .brand__logo-img{
-    height:84px;
-    max-height:84px;
+    height:80px;
+    max-height:80px;
   }
   .brand__tagline,
   .brand__name{
@@ -931,9 +884,8 @@ aside.panel{
     font-size:.7rem;
   }
   .nav{
-    --nav-h:160px;
+    --nav-h:140px;
   }
-
   .config-summary{
     flex-direction:column;
     align-items:flex-start
@@ -952,7 +904,7 @@ aside.panel{
 <nav class="nav" aria-label="Primary">
   <div class="nav__inner">
     <!-- left: logo -->
-    <div class="brand-left" aria-label="CoreFlux">
+    <div class="brand" aria-label="CoreFlux">
       <img class="brand__logo-img" src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
     </div>
 
@@ -1009,15 +961,13 @@ aside.panel{
     <div class="mock" id="mock" aria-label="Rig views">
       <button class="mock__toggle" id="fitToggle" type="button" aria-pressed="true">Fill</button>
 
-      <!-- slides -->
-      <img class="mock__slide active" src="assets/images/Iso%20View.png" alt="CoreFlux Dynamic frame with actuator hardpoints and mounts">
-      <img class="mock__slide" src="assets/images/Quad%20Monitor%20Stand.jpg" alt="CoreFlux frame running triple curved monitors plus overhead HUD">
-      <img class="mock__slide" src="assets/images/Top%20View.png" alt="Top-down view showing seating position, pedal base, and monitor arc">
+      <!-- ONLY TWO SLIDES NOW -->
+      <img class="mock__slide active" src="assets/images/Left%20View.png" alt="CoreFlux frame left view, actuator-ready bracing">
+      <img class="mock__slide" src="assets/images/Right%20View.png" alt="CoreFlux frame right view, control mounts and seating position">
 
       <div class="mock__nav" role="tablist" aria-label="Rig images">
-        <span class="dot active" role="tab" aria-selected="true" aria-label="Dynamic frame"></span>
-        <span class="dot" role="tab" aria-selected="false" aria-label="Triple monitor setup"></span>
-        <span class="dot" role="tab" aria-selected="false" aria-label="Top view geometry"></span>
+        <span class="dot active" role="tab" aria-selected="true" aria-label="Left view"></span>
+        <span class="dot" role="tab" aria-selected="false" aria-label="Right view"></span>
       </div>
     </div>
   </div>
@@ -1144,7 +1094,7 @@ aside.panel{
     <div class="proof-strip">
       <div class="proof-cell">
         <div class="proof-head">Torque</div>
-        <div class="proof-metric">&gt; 15 Nm wheel bases</div>
+        <div class="proof-metric">> 15 Nm wheel bases</div>
         <div class="proof-desc">Steering ties into a reinforced cross member. No twist under load.</div>
       </div>
       <div class="proof-cell">
@@ -1466,7 +1416,7 @@ aside.panel{
   <!-- proof photo -->
   <div class="panel" style="margin-top:16px;display:flex;flex-wrap:wrap;gap:16px;align-items:flex-start">
     <div style="flex:2 1 260px;min-width:240px">
-      <img src="assets/images/Quad%20Monitor%20Stand%20(2).jpg" alt="CoreFlux rig running curved triple setup plus overhead HUD monitor" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow);background:#000;object-fit:contain;">
+      <img src="assets/images/Quad%20Monitor%20Stand%20(2).jpg" alt="CoreFlux rig running curved triple setup plus overhead HUD monitor" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow);background:#000;">
     </div>
     <div style="flex:1 1 200px;min-width:200px;font-size:.8rem;line-height:1.4;font-weight:500;color:var(--muted)">
       <div style="color:var(--text);font-weight:700;font-size:.8rem;line-height:1.3;margin-bottom:6px">Triples + Overhead HUD</div>
@@ -1681,7 +1631,7 @@ aside.panel{
   </div>
 
   <div class="panel" style="margin-top:16px;text-align:center">
-    <img src="assets/images/Back%20View.png" alt="Rear view of CoreFlux frame showing seat rails, pedal base, and side mounts" style="width:100%;max-width:480px;height:auto;margin:0 auto 12px;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow);background:#000;object-fit:contain;">
+    <img src="assets/images/Back%20View.png" alt="Rear view of CoreFlux frame showing seat rails, pedal base, and side mounts" style="width:100%;max-width:480px;height:auto;margin:0 auto 12px;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow);background:#000;">
     <div style="font-size:.75rem;line-height:1.4;font-weight:500;color:var(--muted);max-width:520px;margin:0 auto">
       Seat rails, pedal base, HOTAS / shifter arms, monitor stack — all in one footprint. Dial posture once and it stays there.
     </div>
@@ -1746,15 +1696,15 @@ aside.panel{
     <summary style="font-weight:800;cursor:pointer;">Will Dynamic shake my house apart?</summary>
     <p>Dynamic is actuator-ready; travel is tuned for cues — heave, surge, yaw onset — not theme-park throw.</p>
   </details>
-  <details class="panel" style="margin:10px 0;">
+  <details class="panel" style="margin:10px 0%;">
     <summary style="font-weight:800;cursor:pointer;">Can I start Static and upgrade later?</summary>
     <p>Yes. Static → Dynamic is supported. Controls, screens, mounts, Stream Deck arm all carry forward.</p>
   </details>
-  <details class="panel" style="margin:10px 0;">
+  <details class="panel" style="margin:10px 0%;">
     <summary style="font-weight:800;cursor:pointer;">How long does assembly take?</summary>
     <p>About 2 hours with a hex set. Modules click in — no drilling.</p>
   </details>
-  <details class="panel" style="margin:10px 0;">
+  <details class="panel" style="margin:10px 0%;">
     <summary style="font-weight:800;cursor:pointer;">Triple / Quad monitor really stable?</summary>
     <p>Yes — arms mount into frame structure, not a wobbly desk post.</p>
   </details>
@@ -1771,7 +1721,7 @@ aside.panel{
 /* Footer year */
 document.getElementById('year').textContent = new Date().getFullYear();
 
-/* Hero carousel */
+/* Hero carousel (2-slide, always fill) */
 document.addEventListener('DOMContentLoaded', ()=>{
   const slides=[...document.querySelectorAll('.mock__slide')];
   const dots=[...document.querySelectorAll('.dot')];
@@ -1784,27 +1734,32 @@ document.addEventListener('DOMContentLoaded', ()=>{
     slides.forEach((s,k)=>s.classList.toggle('active',k===i));
     dots.forEach((d,k)=>d.classList.toggle('active',k===i));
   }
+
   function play(){ timer=setInterval(()=>show(i+1), 5200); }
   function stop(){ clearInterval(timer); }
 
-  dots.forEach((d,idx)=>d.addEventListener('click',()=>{ stop(); show(idx); play(); }));
+  dots.forEach((d,idx)=>d.addEventListener('click',()=>{
+    stop();
+    show(idx);
+    play();
+  }));
 
   if (mock){
     mock.addEventListener('mouseenter',stop);
     mock.addEventListener('mouseleave',play);
   }
 
-  if (fitBtn && mock){
-    // Fit mode is visually locked as contain. We just fake the toggle text.
-    fitBtn.addEventListener('click',()=>{
-      // no class flip. just flip label for feel
-      const pressed = fitBtn.getAttribute('aria-pressed') === 'true';
-      fitBtn.setAttribute('aria-pressed', String(!pressed));
-      fitBtn.textContent = pressed ? 'Fill' : 'Fit';
+  if (fitBtn){
+    // cosmetic only now; always Fill/cover mode
+    fitBtn.textContent = "Fill";
+    fitBtn.setAttribute('aria-pressed', 'true');
+    fitBtn.addEventListener('click', (e)=>{
+      e.preventDefault();
     });
   }
 
-  show(0); play();
+  show(0);
+  play();
 });
 
 /* Mock glow parallax */
@@ -1865,7 +1820,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   function selectedRadios(){
     const sel=[];
     for(const g of radioGroups){
-      const r = root.querySelector(\`input[type="radio"][name="\${g}"]:checked\`);
+      const r = root.querySelector(`input[type="radio"][name="${g}"]:checked`);
       if(r) sel.push(r);
     }
     return sel;
@@ -1894,31 +1849,31 @@ document.addEventListener('DOMContentLoaded', ()=>{
     let total = 0;
     const picked = [];
 
-    $$('input[type="checkbox"]', root).forEach(ch=>{
+    $$( 'input[type="checkbox"]', root ).forEach(ch=>{
       if(ch.disabled) return;
       if(ch.checked){
         const price = parsePrice(ch);
         total += price;
-        picked.push(\`\${labelFor(ch)} — $\${price}\`);
+        picked.push(`${labelFor(ch)} — $${price}`);
       }
     });
 
     selectedRadios().forEach(r=>{
       const price = parsePrice(r);
       total += price;
-      picked.push(\`\${labelFor(r)} — $\${price}\`);
+      picked.push(`${labelFor(r)} — $${price}`);
     });
 
     if(linesEl){
       linesEl.innerHTML = picked
-        .map(t=>\`<li style="padding:6px 0;border-bottom:1px solid var(--border)">\${t}</li>\`)
+        .map(t=>`<li style="padding:6px 0;border-bottom:1px solid var(--border)">${t}</li>`)
         .join('');
     }
     if(countEl){
-      countEl.textContent = \`\${picked.length} module\${picked.length===1?'':'s'} selected\`;
+      countEl.textContent = `${picked.length} module${picked.length===1?'':'s'} selected`;
     }
     if(totalEl){
-      totalEl.textContent = \`$\${total}\`;
+      totalEl.textContent = `$${total}`;
     }
   }
 
@@ -2011,21 +1966,21 @@ document.addEventListener('DOMContentLoaded', ()=>{
     // build a prefilled email so you have the lead, even on static hosting
     const subject = encodeURIComponent("CoreFlux Simpits Pilot Batch Reservation");
     const body = encodeURIComponent(
-\`Email: \${e}
-Region: \${rg}
-Primary Mode: \${md}
+`Email: ${e}
+Region: ${rg}
+Primary Mode: ${md}
 
 Setup notes / hardware (optional, fill in before send):
 - Wheel base / HOTAS / pedals:
 - Triple / quad / VR:
 - Static or Dynamic interest:
-- Anything we should know (desk space, neighbors, etc.):\`
+- Anything we should know (desk space, neighbors, etc.):`
     );
 
-    // TODO: replace this with your inbox
+    // CHANGE THIS to your inbox
     const dest = "team@coreflux.fake";
 
-    window.location.href = \`mailto:\${dest}?subject=\${subject}&body=\${body}\`;
+    window.location.href = `mailto:${dest}?subject=${subject}&body=${body}`;
 
     note.textContent="Locked. We'll reach out with pilot batch details.";
     note.style.color="var(--text)";
