--- a/index.html
+++ b/index.html
@@ -368,16 +368,13 @@ section{ padding:48px 0; position:relative; z-index:1; }
   z-index:1;
 }
 
-/* FILL MODE LOCKED:
-   - always cover the frame
-   - subtle cinematic scale
-*/
+/* always cover */
 .mock__slide{
   position:absolute;
   inset:0;
   width:100%;
   height:100%;
-  object-fit:cover;          /* always fill */
+  object-fit:cover;
   opacity:0;
   transform:scale(1.03);
   transition:opacity 1s ease, transform 9s ease;
@@ -961,9 +958,9 @@ aside.panel{
     <div class="mock" id="mock" aria-label="Rig views">
       <button class="mock__toggle" id="fitToggle" type="button" aria-pressed="true">Fill</button>
 
-      <!-- ONLY TWO SLIDES NOW -->
-      <img class="mock__slide active" src="assets/images/Left%20View.png" alt="CoreFlux frame left view, actuator-ready bracing">
-      <img class="mock__slide" src="assets/images/Right%20View.png" alt="CoreFlux frame right view, control mounts and seating position">
+      <!-- ONLY TWO SLIDES NOW, UPDATED FILENAMES -->
+      <img class="mock__slide active" src="assets/images/frame-left.png" alt="CoreFlux frame left view, actuator-ready bracing">
+      <img class="mock__slide" src="assets/images/frame-right.png" alt="CoreFlux frame right view, control mounts and seating position">
 
       <div class="mock__nav" role="tablist" aria-label="Rig images">
         <span class="dot active" role="tab" aria-selected="true" aria-label="Left view"></span>
@@ -1109,7 +1106,7 @@ aside.panel{
       </div>
     </div>
     <aside class="force-vis">
-      <img src="assets/images/Left%20View.png" alt="Reinforced members and actuator-ready bracing">
+      <img src="assets/images/frame-left.png" alt="Reinforced members and actuator-ready bracing">
       <div style="color:var(--text);font-weight:700;font-size:.8rem;line-height:1.3;margin-bottom:4px">Braced Under Load</div>
       Holds DD torque, loadcell brake force, and motion shock without walking or twist.
     </aside>
