--- a/index.html
+++ b/index.html
@@ -1709,10 +1709,22 @@ aside.panel{
 
 <footer>
   © <span id="year"></span> CoreFlux Simpits
-  <div class="footer-note">
+  <div class="footer-note" style="margin-top:16px; line-height:1.6;">
+    <strong>CoreFlux (Pty) Ltd</strong><br>
+    Sandton<br>
+    Johannesburg<br>
+    South Africa
+  </div>
+  <div class="footer-note" style="margin-top:10px; line-height:1.6;">
+    <strong>Contact</strong><br>
+    Email: <a href="mailto:sales@coreflux.co.za" style="color:var(--accent);text-decoration:none;">sales@coreflux.co.za</a><br>
+    Phone: <a href="tel:+27115688667" style="color:var(--accent);text-decoration:none;">+27 11 568 8667</a>
+  </div>
+  <div class="footer-note" style="margin-top:12px;">
     Geometry, actuator bracing, and tolerances are being dialed with pilot builders. You’re not “preordering a box.” You’re helping shape final spec.
   </div>
 </footer>
+
 
 <script>
 /* Footer year */
